app-constructs/argocd/ingress-rule.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server-ingress
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`argocd.tgnnapp.local`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: argocd-server
      port: 80
