app-constructs/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/force-ssl-redirect: "false"
    traefik.ingress.kubernetes.io/ssl-passthrough: "false"
spec:
  rules:
  - host: argocd.tgnnapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: http
